# edazer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
edazer/: __init__.py  core.py
edazer/utils/: pk.py
examples/: example_usage.ipynb
tests/: test.ipynb
